@@ -1,5 +1,10 @@
+2014-09-16 Kyotaro Horiguchi <horiguchi.kyotaro@lab.ntt.co.jp>
+	* pg_dbms_stats.c: 内部の統計情報キャッシュでテーブルの継承状態を正
+	しく扱っていなかったバグを修正しました。この問題により継承テーブル
+	の親テーブルに関する統計情報ロックが正しく行えていませんでした。
+
 2014-08-25 Kyotaro Horiguchi <horiguchi.kyotaro@lab.ntt.co.jp>
-	*pg_dbms_stats.c: 内部の統計情報キャッシュのキーであるリレーション
+	* pg_dbms_stats.c: 内部の統計情報キャッシュのキーであるリレーション
 	IDのハッシュ値を文字列として計算していたバグを修正しました。この問
 	題により中に"0x00"のバイト値を持ち、それより下位(リトルエンディアン
 	の場合)のバイトが一致する複数のOIDが間違って一致しているものとして
